@@ -2,6 +2,7 @@
 
 	* nethack.el (nethack-map-mode-syntax-table): New variable.
 	(nethack-map-mode): Use nethack-map-mode-syntax-table.
+	(nethack-map-glyph-face): Don't set face on tty displays.
 
 2002-01-14  Ryan C Yeske  <rcyeske@sfu.ca>
 
